Unified: Relayout audio settings button on change

In order to show audio settings button on headphone connectivity change,
we should relayout the slider view when visibility is changed.

TEST=manual
BUG=880237

Change-Id: I966ee7082987ddbefb83a434657c5b733570ca94
Reviewed-on: https://chromium-review.googlesource.com/1215509
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590151}