ash/system/audio/unified_volume_view.cc
@@ -182,7 +182,7 @@ void UnifiedVolumeView::OnActiveInputNodeChanged() {
 }
 
 void UnifiedVolumeView::ChildVisibilityChanged(views::View* child) {
-  Update(true /* by_user */);
+  Layout();
 }
 
 }  // namespace ash
